chore: add uniffi tests